--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,9 +213,9 @@ body {
 }
 
 .show {
-  display: block;
+  display: block !important;
 }
 
 .hide {
-  display: none;
+  display: none !important;
 }
