add price validation in multiproduct card and move js code to index.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ body {
 
 #validationMessage3,
 #validationMessage2,
+#validationMessage1,
 #validationMessage {
   color: red;
   display: none;
